--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
