--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
+    "mongoose-immutable-plugin": "^1.0.3",
     "node-fetch": "^2.6.0",
     "swagger-ui-express": "^4.1.4",
     "uniqid": "^5.2.0"
