--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/MoreiraJorge/paw2020#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "mongoose-immutable-plugin": "^1.0.3",
     "node-fetch": "^2.6.0",
