--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   "homepage": "https://github.com/MoreiraJorge/paw2020#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "node-fetch": "^2.6.0",
+    "swagger": "^0.7.5",
     "swagger-ui-express": "^4.1.4",
     "uniqid": "^5.2.0"
   },
