--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Created by https://www.gitignore.io/api/node,angular
 # Edit at https://www.gitignore.io/?templates=node,angular
 
-### vscode ###
-.vscode
-
 ### Angular ###
 ## Angular ##
 # compiled output
@@ -99,8 +96,8 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variables file
-#.env
-#.env.test
+.env
+.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
