--- a/restAPI/.env
+++ b/restAPI/.env
@@ -10,7 +10,7 @@ MONGO_DB_DATABASE_NAME = Lab
 # JWT
 JWT_SECRET=A really secure secret
 # 1 minute
-SESSION_EXP=60000
+SESSION_EXP=3600000
 
 # ADMIN
 ADMIN_IDCARD=0
