--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Project Pipeline
+name: Project Pipeline  
 
 on: [push]
 
@@ -16,7 +16,7 @@ jobs:
         node-version: 12.17.0
     - run: npm install -g @angular/cli
     - run: npm install
-    - run: ng build --base-href=/paw2020/angular-app
+    - run: ng build --base-href=/paw2020
     - run: mkdir public
     - run: mv dist/angular-app/* public/
     - uses: actions/upload-artifact@v1
