--- a/restAPI/.env
+++ b/restAPI/.env
@@ -7,6 +7,9 @@ MONGO_DB_HOST = localhost
 MONGO_BD_PORT = 27017
 MONGO_DB_DATABASE_NAME = Lab
 
+#Atlas Password
+ATLAS_PASS = paw2020
+
 # JWT
 JWT_SECRET=A really secure secret
 # 1 hour
