--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v1.4.2
+      with:
+        node-version: 12.17.0
         
+    - name: script
+      run: |
+        npm install -g @angular/cli
+        npm install
+        ng build --base-href=/paw2020/
+        mkdir public
+        mv dist/angular-app/* public
