--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
 
     - name: script
       run: |
-        npm install -g @angular/cli
+        npm install -g paw2020/angular-app/ @angular/cli
         npm install
-        ng build --base-href=/paw2020/angular-app
+        ng build --base-href=/paw2020/angular-app/
         mkdir public
         mv dist/angular-app/* public
