--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,9 @@ jobs:
 
     - name: script
       run: |
-        npm install
-        ng build --base-href=/paw2020/angular-app/
+        npm install -g /angular-app/ @angular/cli
+        npm install /angular-app/
+        ng build --base-href=/angular-app/
         mkdir public
         mv dist/angular-app/* public
       env:
