--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       run: |
         npm install -g @angular/cli
         npm install
-        ng build --base-href=/paw2020/
+        ng build --base-href=/paw2020/angular-app/
         mkdir public
         mv dist/angular-app/* public
