--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: actions checkout
+      uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v1.4.2
