--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,9 @@ jobs:
         mkdir public
         mv dist/angular-app/* public
     - name: GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v2.0.1
-      with:
-        repo: paw2020
-        target_branch: gh-pages
-        build_dir: angular-app/dist/angular-app
+      uses: JamesIves/github-pages-deploy-action@releases/v2
+      env:
+        ACCESS_TOKEN: §{{ secrets.TOKEN }}
+        BASE_BRANCH: master
+        BRANCH: gh-pages
+        FOLDER: angular-app/dist/angular-app
