--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         npm install -g @angular/cli
         npm install
-        ng build --prod --base-href="/angular-app/"
+        ng build --prod --base-href="/paw2020/"
         mkdir public
         mv dist/angular-app/* public
     - name: GitHub Pages
