--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "mongoose-immutable-plugin": "^1.0.3",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "swagger-ui-express": "^4.1.4",
     "uniqid": "^5.2.0"
