--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -30,6 +30,7 @@
     "mongoose-immutable-plugin": "^1.0.3",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.4.8",
     "swagger-ui-express": "^4.1.4",
     "uniqid": "^5.2.0"
   },
