--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -26,7 +26,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "404.html"
+              "src/404.html"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
