--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
           run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
         - name: Deploy backend to heroku
           run: git push --force heroku `git subtree split --prefix restAPI HEAD`:master   
-          #run: git subtree push --prefix RestAPI heroku master
+          #run: git subtree push --prefix restAPI heroku master
         
 
