--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         - name: Add remote origin
           run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
         - name: Deploy backend to heroku
-          run: git push --force heroku `git subtree split --prefix restAPI HEAD`:master   
-          #run: git subtree push --prefix restAPI heroku master
+          #run: git push --force heroku `git subtree split --prefix restAPI HEAD`:master   
+          run: git subtree push --prefix restAPI heroku master
         
 
