--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "heroku-prebuild": "npm install pm2 -g",
-    "start": "pm2-runtime start ecosystem.config.js --env production"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
